--- a/src/html/bio/alberto.html
+++ b/src/html/bio/alberto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - David Macou"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Ibraimo Alberto"}' />
     </head>
 
     <body class="bg-white text-gray-700">
@@ -9,6 +9,6 @@
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">David Macou</main>
+        <main class="m-auto sm:w-full md:w-4/5">Ibraimo Alberto</main>
     </body>
 </html>
