--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Biographien"}' />
+        <include src="./partials/head.html"
+            locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Biographien"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./", "active": "yes"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">
+        <main class="m-auto">
             <div id="macou" class="mb-40">David Macou</div>
             <div id="alberto" class="mb-40">Ibraimo Alberto</div>
             <div id="seifert" class="mb-40">Lan und Huu Loi Bin Seifert</div>
         </main>
     </body>
+
 </html>
