--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-
     <head>
-        <include src="./partials/head.html"
-            locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Biographien"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Biographien"}' />
     </head>
 
     <body class="bg-white text-gray-700">
@@ -12,10 +10,194 @@
         </header>
 
         <main class="m-auto">
-            <div id="macou" class="mb-40">David Macou</div>
-            <div id="alberto" class="mb-40">Ibraimo Alberto</div>
-            <div id="seifert" class="mb-40">Lan und Huu Loi Bin Seifert</div>
+            <div id="munjunga">
+                <h4>Augusto Jone Munjunga</h4>
+                <div>
+                    Augusto Jone Munjunga wurde 1965 in Angola geboren. Nach dem Militärdienst arbeitete er als Finanzkaufmann im
+                    Staatsministerium der Provinz Benguela. Mit der Vorstellung zu studieren kam Augusto 1987, als 22 Jähriger in die DDR.
+                    Statt des Studiums wurde er im SVKE [Schlacht- und Verarbeitungskominat Eberswalde] als Vertragsarbeiter eingesetzt.
+                    1990 entschied sich Augusto gegen die Rückkehr nach Angola trotz der angebotene 5000 DM Abfindung. Er blieb in
+                    Deutschland um weiter zu arbeiten und Geld zu verdienen. Mit anderen Vertragsarbeiter:innen gründete er 1994 den
+                    Afrikanischen Kulturverein Palanca in Eberswalde. Nach dem dramatischen Mord an Amadeu Antonio Kiowa 1990 ist Ziel des
+                    Vereins ist die gesellschaftlichen Mitwirkung so wie das Zusammenleben und Vermitteln zwischen den Kulturen. Deutschland
+                    ist seine Heimat geworden, heute lebt Augusto zwischen Eberswalde und Berlin.
+                </div>
+
+                <div>
+                    Augustos Interviews: ab heute hier ist das euer Arbeitsplatz - das ist moderne Sklaverei - ich dachte ihr seit schon weg
+                </div>
+            </div>
+
+            <div id="pfaff">
+                <h4>Ngoc Bich Pfaff</h4>
+                <div>
+                    Ngoc Bich Pfaff wurde 1965 in Vietnam geboren. Mit 17 Jahren kam sie als Vertragsarbeiterin in die DDR, um in
+                    Schwarzenberg-Erzebirge zu arbeiten. Entgegen der Bestimmungen für den Aufenthalt wurde Ngoc Bich Pfaff schwanger und
+                    entschied sich 1986 ihre Tochter zu bekommen. Mit der Unterstütztung von deutschen Kolleg:innen und Betreur:innen konnte
+                    sie trotz Mutterschaft in der DDR bleiben und weiter arbeiten. 1987 heiratete Ngoc Bich Pfaff einen deutschen Mann für
+                    das Bleiberecht. Sie hat heute ihre eigene Schneiderei in Chemnitz, wo sie immer noch lebt.
+                </div>
+
+                <div>Bichs Interviews: du bist ganz anders gesehen</div>
+            </div>
+
+            <div id="macou">
+                <h4>David Macou</h4>
+                <div>
+                    David Macou wurde 1959 in Mosambik geboren. 1979 kam er mit 19 Jahren, als einer der ersten mozambikanischen
+                    Vertragsarbeiter:innen, in die DDR. Er arbeitete im VEB Braunkohlewerk Welzow [Schwarze Pumpe]. Mit polnischen,
+                    vietnamesischen und mosambikanischen Vertragsarbeiter:innen lebte er im Wohnheim in Hoyerswerda. Unter dem Beifall der
+                    Nachbar:innen erlebte David Macou, im Mai 1990 und September 1991, die Angriffe von Neonazis auf das
+                    Vertragsarbeiterwohnheim. Für 12 Jahre war Hoyerswerda David Macous Zuhause bis im Oktober 1991 alle
+                    Vertragsarbeiter:innen nach Mosambik geschickt wurden. David Macou ist Teil der Gruppe, die wöchentlich in Maputo
+                    protestiert, und die Auszahlung der Lohn- und Rentenansprüche fordert.
+                </div>
+
+                <div>Davids Interviews: wie ein Theater beobachtet - Besuch bekommen - ich bin nur ein Mensch</div>
+            </div>
+
+            <div id="dorinasandreass">
+                <h4>Dorina und Andreas S.</h4>
+                <div>
+                    Dorina S. wurde 1969 geboren und wuchs in Rostock-Lichtenhagen auf. Nach der Lehre als Verkäuferin arbeitete sie ab 1988
+                    als Betreuerin für geistigbehinderte Jugendlichen in Rostock-Lichtenhagen. Andreas S. wurde 1965 geboren und wuchs mit
+                    fünf weiteren Geschwistern im Rostocker Hansa-Viertel auf. Bis zu einem Arbeitsunfall war er Facharbeiter für
+                    geologische Bohrung. Ab 1989 arbeitete er mit geistigbehinderte Jugendlichen in Rostock-Lichtenhagen. Über die
+                    gemeinsame Arbeit im Wohnheim für Menschen mit Behinderung lernten sich Dorina und Andreas S. kennen. Nach der Geburt
+                    ihrer Tochter zogen sie 1990 nach Rostock-Lichtenhagen, wo sie im August 1992 Zeug:innen der Pogrome wurden. Sie leben,
+                    nach wie vor, in der Nähe von Rostock-Lichtenhagen.
+                </div>
+
+                <div>
+                    Dorina und Andreas Interviews: weil die hier arbeiten wollten - es ist ein neues System - meine Arbeit nehmen die mir
+                    jetzt weg - wo kommen die Alle her - das nahm ja so Überhand - weg hier mit euch - manchmal war es für uns spannend -
+                    die waren so in ihrem Rausch
+                </div>
+            </div>
+
+            <div id="nam">
+                <h4>Duong Hoai Nam</h4>
+                <div>
+                    1958 wurde Duong Hoai Nam wurde in Vietnam geboren. Duong Hoai Nam ist während dem Vietnamkrieg aufgewachsen und kam
+                    1988 als Vertragsarbeiter in die DDR. Von 1988 bis 1991 war er vollbeschäftigt in einem Kombinat in Karl-Marx-Stadt
+                    (heute Chemnitz). Heute lebt er in Leipzig, arbeitet als Trainer in seinem eigenen Kampfsport Studio und ist
+                    leidenschaftlicher Musiker.
+                </div>
+
+                <div>Hoais Interviews: ich liebe Deutschland</div>
+            </div>
+
+            <div id="alberto">
+                <h4>Ibraimo Alberto</h4>
+                <div>
+                    Ibraimo Alberto wurde 1963 in Mosambik geboren. Er kam 1981 für ein Studium in die DDR, statt dessen wurde er im VEB
+                    Fleischkombinat Berlin als Vertragsarbeiter eingesetzt und als Fleischer ausgebildet. Nach einem kurzen Aufenthalt in
+                    Mosambik kam Ibraimo Alberto zurück in die DDR. Für das VEB Glaswerk Stralau arbeitete er als Gruppenleiter der
+                    mosambikanischen Vertragsarbeiter:innen. Zeitgleich begann er das Boxen zu trainieren. 1988 bekam Ibraimo Alberto eine
+                    „Teil-Einbürgerung“ in die DDR um bei internationalen Boxwettkämpfen anzutreten. 1990 zog er nach Schwedt, später machte
+                    dort er eine Ausbildung zum Sozialarbeiter und war anschließend Ausländerbeauftragter der Stadt Schwedt. Inzwischen lebt
+                    er wieder in Berlin, er ist weiterhin sozial engagiert und trainiert mit Jugendlichen das Boxen.
+                </div>
+
+                <div>Ibraimos Interviews: die Gesellschaft war nicht so interessiert - was guckst du</div>
+            </div>
+
+            <div id="jankrenek">
+                <h4>Jan K. und René K.</h4>
+                <div>
+                    Jan K. wurde 1968, René K. 1976 geboren. Im September 1991 waren beide Teil der Masse in Hoyerswerda, die das Wohnheim
+                    für Vertragsarbeiter:innen und die Geflüchtetenunterkunft angriff. Heute sind Jan K. und René K. engagierte Mitglieder
+                    des VVN-BdA [Vereinigung der Verfolgten des Naziregimes – Bund der Antifaschistinnen und Antifaschisten e.V.]. Beide
+                    leben weiterhin in Hoyerswerda.
+                </div>
+
+                <div>
+                    Jan und René Interviews: das ist im Osten Politik gewesen - es gab keine Grenzen - Hoyerswerda hat den Anfang gemacht
+                </div>
+            </div>
+
+            <div id="kordulas">
+                <h4>Kordula S.</h4>
+                <div>
+                    Kordula S. wurde 1960 in Eberswalde geboren. Sie arbeitet bis 1991 im SVKE [Schlacht- und Verarbeitungskominat
+                    Eberswalde], dort war sie unter anderem als Betreuerin der angolanischen und mosambikanischen Vertragsarbeiter:innen
+                    beschäftigt. 2000 gründete Kordula S. ihr eigenes Bestattungsunternehmen. Seit 1999 ist sie Mitglied der PDS, jetzt DIE
+                    LINKE, und war in der kommunale Politik engagiert. Weiterhin ist Kordula S. ehrenamtlich in Vereinen und karikativen
+                    Einrichtungen in der Region Schorfheide engagiert.
+                </div>
+
+                <div>Kordulas Interview: für mich war das ein Unfall</div>
+            </div>
+
+            <div id="gotsch">
+                <h4>Lam Gotsch</h4>
+                <div>
+                    Lam Gotsch wurde 1951 in Ho-Chi-Min-Stadt (heute Hanoi) geboren. Direkt nach dem Abitur 1968 kam sie in die DDR, wo sie
+                    an der TU-Dresden Maschinenbau studierte. Lam Gotsch kam als Vertragsarbeiterin 1987 ein zweites Mal in die DDR. Sie
+                    arbeitete als Sprachvermittlerin im VEB Kombinat Textima in Karl-Marx-Stadt (heute Chemnitz). 1989 holte sie ihre
+                    jüngere Tochter in die DDR nach. 1992 hat Lam Gotsch geheiratet und damit den Aufenthaltstitel erhalten. Lam Gotsch lebt
+                    heute immer noch in Chemnitz, ihre beide Töchter arbeiten jeweils als Ärtzin und Steuerberaterin.
+                </div>
+
+                <div>Lams Interviews: ich bin jetzt glücklich</div>
+            </div>
+
+            <div id="seifert">
+                <h4>Lan und Huu Loi Bin Seifert</h4>
+                <div>
+                    Lan Seifert wurde 1970 und Loi Bin Seifert wurde 1965 geboren. Beide wuchsen in Vietnam auf und kamen 1988 als
+                    Vetragsarbeiter:innen in die DDR. Lan und Huu Loi Bin Seifert waren im VEB Leuchtenbau Leipzig tätig, wo sie sich kennen
+                    lernten. Nach der Wende heirateten sie und bekamen einen Sohn. Aus Rationalisierungsgründen konnten nicht beide weiter
+                    im Betrieb beschäftigt bleiben, daraufhin entschied sich Loi Bin für eine Umschulung. Lan ist, wie vor der Wende, weiter
+                    im ehemaligen VEB Leuchtenbau [heute Leipziger Leuchten GmbH] beschäftigt. Loi Bin arbeitet im BMW Werk Leipzig. Beide
+                    leben bis heute in Leipzig und haben einen Schrebergarten.
+                </div>
+
+                <div>Lan und Lois Interviews: das ist normal</div>
+            </div>
+
+            <div id="mvuama">
+                <h4>Moises Mvuama</h4>
+                <div>
+                    Lan Seifert wurde 1970 und Loi Bin Seifert wurde 1965 geboren. Beide wuchsen in Vietnam auf und kamen 1988 als
+                    Vetragsarbeiter:innen in die DDR. Lan und Huu Loi Bin Seifert waren im VEB Leuchtenbau Leipzig tätig, wo sie sich kennen
+                    lernten. Nach der Wende heirateten sie und bekamen einen Sohn. Aus Rationalisierungsgründen konnten nicht beide weiter
+                    im Betrieb beschäftigt bleiben, daraufhin entschied sich Loi Bin für eine Umschulung. Lan ist, wie vor der Wende, weiter
+                    im ehemaligen VEB Leuchtenbau [heute Leipziger Leuchten GmbH] beschäftigt. Loi Bin arbeitet im BMW Werk Leipzig. Beide
+                    leben bis heute in Leipzig und haben einen Schrebergarten.
+                </div>
+
+                <div>
+                    Moises Interviews: der Rassismus wurde noch stärker - in diesem Land muss ich sterben - heute habe ich dieses Trauma
+                    nicht mehr - die kannten keine Schwarzen
+                </div>
+            </div>
+
+            <div id="sieglinder">
+                <h4>Sieglinde R.</h4>
+                <div>
+                    Sieglinde R. wurde 1942 geboren. 1977 war sie mit ihrer Familie eine der ersten Mieter:innen in der Plattenbausiedlung
+                    Rostock-Lichtenhagen. Sie lebt heute im Sonnenblumehochhaus in Rostock-Lichtenhagen.
+                </div>
+
+                <div>Sieglindes Interviews: xxx</div>
+            </div>
+
+            <div id="silkedenniso">
+                <h4>Silke und Dennis O.</h4>
+                <div>
+                    Silke O. wurde in Hoyerswerda, Dennis O. wurde in Queklenburg geboren, beide sind Jahrgang 1963. Dennis O. hat Silke O.
+                    1984 währen seinem Militärdienst bei der Marine kennengelernt. Im Aschluss zog Dennis O. 1985 nach Hoyerswerda um Silke
+                    O. zu heiraten. Silke O. arbeitete als Krippenerzieherin in einem Dauerheim und Dennis O. war im VEB Gaskombinat
+                    Schwarze Pumpe beschäftigt. Zur Wende waren beide 26 Jahre alt. Sie haben zwei Kinder, die 1986 und 1989 geboren wurden.
+                    Silke und Dennis O. leben und arbeiten weiterhin in Hoyerswerda.
+                </div>
+
+                <div>
+                    Silke und Dennis Interviews: es war nicht böse gemeint - dieser Begriff „Vertragsarbeiter“ - wir waren immer sicher -
+                    die Möglichkeit hatten wir gar nicht - es war so ein wirre Zeit
+                </div>
+            </div>
         </main>
     </body>
-
 </html>
