--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -9,9 +9,9 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "yes"}'></include>
         </header>
 
-        <main>
+        <main class="font-crimson-text tracking-tight">
             <div class="flex pb-20">
-                <div id="munjunga" class="w-3/5 pr-10 font-crimson-text text-lg">
+                <div id="munjunga" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Augusto Jone Munjunga</h4>
                     <div class="text-base font-semibold">
                         Augusto Jone Munjunga wurde 1965 in Angola geboren. Nach dem Militärdienst arbeitete er als Finanzkaufmann im
@@ -35,7 +35,7 @@
 
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_036.jpg" class="w-full" />
-                    <span class="block w-full text-right font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-right text-xs text-gray-800"
                         >Aus dem Archiv von Augusto Jone Munjunga</span
                     >
                 </div>
@@ -44,12 +44,12 @@
             <div class="flex pb-20">
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_037.jpg" class="w-full" />
-                    <span class="block w-full text-left font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-left text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-1989-0507-020 / Wolfgang Thieme / CC-BY-SA 3.0</span
                     >
                 </div>
 
-                <div id="pfaff" class="w-3/5 pl-10 font-crimson-text text-lg">
+                <div id="pfaff" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ngoc Bich Pfaff</h4>
                     <div class="text-base font-semibold">
                         Ngoc Bich Pfaff wurde 1965 in Vietnam geboren. Mit 17 Jahren kam sie als Vertragsarbeiterin in die DDR, um in
@@ -64,7 +64,7 @@
             </div>
 
             <div class="flex pb-20">
-                <div id="macou" class="w-3/5 pr-10 font-crimson-text text-lg">
+                <div id="macou" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">David Macou</h4>
                     <div class="text-base font-semibold">
                         David Macou wurde 1959 in Mosambik geboren. 1979 kam er mit 19 Jahren, als einer der ersten mozambikanischen
@@ -85,19 +85,19 @@
 
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_038.jpg" class="w-full" />
-                    <span class="block w-full text-right font-crimson-text text-xs text-gray-800">Aus dem Archiv von David Macou</span>
+                    <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von David Macou</span>
                 </div>
             </div>
 
             <div class="flex pb-20">
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_039.jpg" class="w-full" />
-                    <span class="block w-full text-left font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-left text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-Z0514-026/CC-BY-SA 3.0</span
                     >
                 </div>
 
-                <div id="dorinasandreass" class="w-3/5 pl-10 font-crimson-text text-lg">
+                <div id="dorinasandreass" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Dorina und Andreas S.</h4>
                     <div class="text-base font-semibold">
                         Dorina S. wurde 1969 geboren und wuchs in Rostock-Lichtenhagen auf. Nach der Lehre als Verkäuferin arbeitete sie ab
@@ -118,7 +118,7 @@
             </div>
 
             <div class="flex pb-20">
-                <div id="nam" class="w-3/5 pr-10 font-crimson-text text-lg">
+                <div id="nam" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Duong Hoai Nam</h4>
                     <div class="text-base font-semibold">
                         1958 wurde Duong Hoai Nam wurde in Vietnam geboren. Duong Hoai Nam ist während dem Vietnamkrieg aufgewachsen und kam
@@ -135,7 +135,7 @@
 
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_040.jpg" class="w-full" />
-                    <span class="block w-full text-right font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-right text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-1982-0915-020 / CC-BY-SA 3.0</span
                     >
                 </div>
@@ -144,10 +144,10 @@
             <div class="flex pb-20">
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_041.jpg" class="w-full" />
-                    <span class="block w-full text-left font-crimson-text text-xs text-gray-800">Aus dem Archiv von Ibraimo Alberto</span>
+                    <span class="block w-full text-left text-xs text-gray-800">Aus dem Archiv von Ibraimo Alberto</span>
                 </div>
 
-                <div id="alberto" class="w-3/5 pl-10 font-crimson-text text-lg">
+                <div id="alberto" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ibraimo Alberto</h4>
                     <div class="text-base font-semibold">
                         Ibraimo Alberto wurde 1963 in Mosambik geboren. Er kam 1981 für ein Studium in die DDR, statt dessen wurde er im VEB
@@ -169,7 +169,7 @@
             </div>
 
             <div class="flex pb-20">
-                <div id="jankrenek" class="w-3/5 pr-10 font-crimson-text text-lg">
+                <div id="jankrenek" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Jan K. und René K.</h4>
                     <div class="text-base font-semibold">
                         Jan K. wurde 1968, René K. 1976 geboren. Im September 1991 waren beide Teil der Masse in Hoyerswerda, die das
@@ -188,7 +188,7 @@
 
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_042.jpg" class="w-full" />
-                    <span class="block w-full text-right font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-right text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-1990-0115-032 / Kluge, Wolfgang / CC-BY-SA 3.0</span
                     >
                 </div>
@@ -197,12 +197,12 @@
             <div class="flex pb-20">
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_043.jpg" class="w-full" />
-                    <span class="block w-full text-left font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-left text-xs text-gray-800"
                         >Aus dem Archiv von Augusto Jone Munjunga</span
                     >
                 </div>
 
-                <div id="kordulas" class="w-3/5 pl-10 font-crimson-text text-lg">
+                <div id="kordulas" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Kordula S.</h4>
                     <div class="text-base font-semibold">
                         Kordula S. wurde 1960 in Eberswalde geboren. Sie arbeitet bis 1991 im SVKE [Schlacht- und Verarbeitungskominat
@@ -220,7 +220,7 @@
             </div>
 
             <div class="flex pb-20">
-                <div id="gotsch" class="w-3/5 pr-10 font-crimson-text text-lg">
+                <div id="gotsch" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lam Gotsch</h4>
                     <div class="text-base font-semibold">
                         Lam Gotsch wurde 1951 in Ho-Chi-Min-Stadt (heute Hanoi) geboren. Direkt nach dem Abitur 1968 kam sie in die DDR, wo
@@ -235,7 +235,7 @@
 
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_044.jpg" class="w-full" />
-                    <span class="block w-full text-right font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-right text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-38600-0007 / CC-BY-SA 3.0</span
                     >
                 </div>
@@ -244,10 +244,10 @@
             <div class="flex pb-20">
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_045.jpg" class="w-full" />
-                    <span class="block w-full text-left font-crimson-text text-xs text-gray-800">Archivbild von Hayo von Reyhe</span>
+                    <span class="block w-full text-left text-xs text-gray-800">Archivbild von Hayo von Reyhe</span>
                 </div>
 
-                <div id="seifert" class="w-3/5 pl-10 font-crimson-text text-lg">
+                <div id="seifert" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lan und Huu Loi Bin Seifert</h4>
                     <div class="text-base font-semibold">
                         Lan Seifert wurde 1970 und Loi Bin Seifert wurde 1965 geboren. Beide wuchsen in Vietnam auf und kamen 1988 als
@@ -266,7 +266,7 @@
             </div>
 
             <div class="flex pb-20">
-                <div id="mvuama" class="w-3/5 pr-10 font-crimson-text text-lg">
+                <div id="mvuama" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Moises Mvuama</h4>
                     <div class="text-base font-semibold">
                         1966 wurde Moises Mvuama in Angola geboren. Mit dem Wunsch, vier oder acht Jahre, eine Aussbildung als
@@ -288,7 +288,7 @@
 
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_046.jpg" class="w-full" />
-                    <span class="block w-full text-right font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-right text-xs text-gray-800"
                         >Aus dem Archiv von Augusto Jone Munjunga</span
                     >
                 </div>
@@ -297,12 +297,12 @@
             <div class="flex pb-20">
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_047.jpg" class="w-full" />
-                    <span class="block w-full text-left font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-left text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-H0612-0301-020/CC-BY-SA 3.0</span
                     >
                 </div>
 
-                <div id="sieglinder" class="w-3/5 pl-10 font-crimson-text text-lg">
+                <div id="sieglinder" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Sieglinde R.</h4>
                     <div class="text-base font-semibold">
                         Sieglinde R. wurde 1942 geboren. 1977 war sie mit ihrer Familie eine der ersten Mieter:innen in der
@@ -314,7 +314,7 @@
             </div>
 
             <div class="flex pb-20">
-                <div id="silkedenniso" class="w-3/5 pr-10 font-crimson-text text-lg">
+                <div id="silkedenniso" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Silke und Dennis O.</h4>
                     <div class="text-base font-semibold">
                         Silke O. wurde in Hoyerswerda, Dennis O. wurde in Queklenburg geboren, beide sind Jahrgang 1963. Dennis O. hat Silke
@@ -335,7 +335,7 @@
 
                 <div class="w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_048.jpg" class="w-full" />
-                    <span class="block w-full text-right font-crimson-text text-xs text-gray-800"
+                    <span class="block w-full text-right text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-78464-0001/CC-BY-SA 3.0</span
                     >
                 </div>
