--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -13,7 +13,7 @@
             <div class="flex pb-20">
                 <div id="munjunga" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Augusto Jone Munjunga</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Augusto Jone Munjunga wurde 1965 in Angola geboren. Nach dem Militärdienst arbeitete er als Finanzkaufmann im
                         Staatsministerium der Provinz Benguela. Mit der Vorstellung zu studieren kam Augusto 1987, als 22 Jähriger in die
                         DDR. Statt des Studiums wurde er im SVKE [Schlacht- und Verarbeitungskominat Eberswalde] als Vertragsarbeiter
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800">Augustos Interviews:</span>
+                        <span class="font-semibold text-black">Augustos Interviews:</span>
                         <a href="./interviews/intrvw_ajm01.html">ab heute hier ist das euer Arbeitsplatz</a> -
                         <a href="./interviews/intrvw_ajm02.html">das ist moderne Sklaverei</a> -
                         <a href="./interviews/intrvw_ajm03.html">ich dachte ihr seit schon weg</a> -
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="w-2/5">
-                    <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_036.jpg" class="w-full" />
+                    <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_036.jpg" class="w-full aspect-auto" />
                     <span class="block w-full text-right text-xs text-gray-800"
                         >Aus dem Archiv von Augusto Jone Munjunga</span
                     >
@@ -51,7 +51,7 @@
 
                 <div id="pfaff" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ngoc Bich Pfaff</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Ngoc Bich Pfaff wurde 1965 in Vietnam geboren. Mit 17 Jahren kam sie als Vertragsarbeiterin in die DDR, um in
                         Schwarzenberg-Erzebirge zu arbeiten. Entgegen der Bestimmungen für den Aufenthalt wurde Ngoc Bich Pfaff schwanger
                         und entschied sich 1986 ihre Tochter zu bekommen. Mit der Unterstütztung von deutschen Kolleg:innen und
@@ -66,7 +66,7 @@
             <div class="flex pb-20">
                 <div id="macou" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">David Macou</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         David Macou wurde 1959 in Mosambik geboren. 1979 kam er mit 19 Jahren, als einer der ersten mozambikanischen
                         Vertragsarbeiter:innen, in die DDR. Er arbeitete im VEB Braunkohlewerk Welzow [Schwarze Pumpe]. Mit polnischen,
                         vietnamesischen und mosambikanischen Vertragsarbeiter:innen lebte er im Wohnheim in Hoyerswerda. Unter dem Beifall
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800">Davids Interviews:</span>
+                        <span class="font-semibold text-black">Davids Interviews:</span>
                         <a href="./interviews/intrvw_dm01.html">wie ein Theater beobachtet</a> -
                         <a href="./interviews/intrvw_dm02.html">Besuch bekommen</a> - ich bin nur ein Mensch
                     </div>
@@ -99,7 +99,7 @@
 
                 <div id="dorinasandreass" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Dorina und Andreas S.</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Dorina S. wurde 1969 geboren und wuchs in Rostock-Lichtenhagen auf. Nach der Lehre als Verkäuferin arbeitete sie ab
                         1988 als Betreuerin für geistigbehinderte Jugendlichen in Rostock-Lichtenhagen. Andreas S. wurde 1965 geboren und
                         wuchs mit fünf weiteren Geschwistern im Rostocker Hansa-Viertel auf. Bis zu einem Arbeitsunfall war er Facharbeiter
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800">Dorina und Andreas Interviews:</span> weil die hier arbeiten wollten - es
+                        <span class="font-semibold text-black">Dorina und Andreas Interviews:</span> weil die hier arbeiten wollten - es
                         ist ein neues System - meine Arbeit nehmen die mir jetzt weg - wo kommen die Alle her - das nahm ja so Überhand -
                         weg hier mit euch - manchmal war es für uns spannend - die waren so in ihrem Rausch
                     </div>
@@ -120,7 +120,7 @@
             <div class="flex pb-20">
                 <div id="nam" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Duong Hoai Nam</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         1958 wurde Duong Hoai Nam wurde in Vietnam geboren. Duong Hoai Nam ist während dem Vietnamkrieg aufgewachsen und kam
                         1988 als Vertragsarbeiter in die DDR. Von 1988 bis 1991 war er vollbeschäftigt in einem Kombinat in Karl-Marx-Stadt
                         (heute Chemnitz). Heute lebt er in Leipzig, arbeitet als Trainer in seinem eigenen Kampfsport Studio und ist
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800">Hoais Interviews:</span>
+                        <span class="font-semibold text-black">Hoais Interviews:</span>
                         <a href="./interviews/intrvw_dhn01.html">ich liebe Deutschland</a>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
 
                 <div id="alberto" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ibraimo Alberto</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Ibraimo Alberto wurde 1963 in Mosambik geboren. Er kam 1981 für ein Studium in die DDR, statt dessen wurde er im VEB
                         Fleischkombinat Berlin als Vertragsarbeiter eingesetzt und als Fleischer ausgebildet. Nach einem kurzen Aufenthalt
                         in Mosambik kam Ibraimo Alberto zurück in die DDR. Für das VEB Glaswerk Stralau arbeitete er als Gruppenleiter der
@@ -161,7 +161,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800">Ibraimos Interviews:</span>
+                        <span class="font-semibold text-black">Ibraimos Interviews:</span>
                         <a href="./interviews/intrvw_ia01.html">die Gesellschaft war nicht so interessiert</a> -
                         <a href="./interviews/intrvw_ia02.html">was guckst du</a>
                     </div>
@@ -171,7 +171,7 @@
             <div class="flex pb-20">
                 <div id="jankrenek" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Jan K. und René K.</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Jan K. wurde 1968, René K. 1976 geboren. Im September 1991 waren beide Teil der Masse in Hoyerswerda, die das
                         Wohnheim für Vertragsarbeiter:innen und die Geflüchtetenunterkunft angriff. Heute sind Jan K. und René K. engagierte
                         Mitglieder des VVN-BdA [Vereinigung der Verfolgten des Naziregimes – Bund der Antifaschistinnen und Antifaschisten
@@ -179,7 +179,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800"> Jan und René Interviews:</span>
+                        <span class="font-semibold text-black"> Jan und René Interviews:</span>
                         <a href="./interviews/intrvw_jr01.html">das ist im Osten Politik gewesen</a> -
                         <a href="./interviews/intrvw_jr02.html">es gab keine Grenze</a> -
                         <a href="./interviews/intrvw_jr03.html">Hoyerswerda hat den Anfang gemacht</a>
@@ -204,7 +204,7 @@
 
                 <div id="kordulas" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Kordula S.</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Kordula S. wurde 1960 in Eberswalde geboren. Sie arbeitet bis 1991 im SVKE [Schlacht- und Verarbeitungskominat
                         Eberswalde], dort war sie unter anderem als Betreuerin der angolanischen und mosambikanischen Vertragsarbeiter:innen
                         beschäftigt. 2000 gründete Kordula S. ihr eigenes Bestattungsunternehmen. Seit 1999 ist sie Mitglied der PDS, jetzt
@@ -213,7 +213,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800">Kordulas Interview:</span>
+                        <span class="font-semibold text-black">Kordulas Interview:</span>
                         <a href="./interviews/intrvw_ks01.html">für mich war das ein Unfall</a>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
             <div class="flex pb-20">
                 <div id="gotsch" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lam Gotsch</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Lam Gotsch wurde 1951 in Ho-Chi-Min-Stadt (heute Hanoi) geboren. Direkt nach dem Abitur 1968 kam sie in die DDR, wo
                         sie an der TU-Dresden Maschinenbau studierte. Lam Gotsch kam als Vertragsarbeiterin 1987 ein zweites Mal in die DDR.
                         Sie arbeitete als Sprachvermittlerin im VEB Kombinat Textima in Karl-Marx-Stadt (heute Chemnitz). 1989 holte sie
@@ -249,7 +249,7 @@
 
                 <div id="seifert" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lan und Huu Loi Bin Seifert</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Lan Seifert wurde 1970 und Loi Bin Seifert wurde 1965 geboren. Beide wuchsen in Vietnam auf und kamen 1988 als
                         Vetragsarbeiter:innen in die DDR. Lan und Huu Loi Bin Seifert waren im VEB Leuchtenbau Leipzig tätig, wo sie sich
                         kennen lernten. Nach der Wende heirateten sie und bekamen einen Sohn. Aus Rationalisierungsgründen konnten nicht
@@ -259,7 +259,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800">Lan und Lois Interviews:</span>
+                        <span class="font-semibold text-black">Lan und Lois Interviews:</span>
                         <a href="./interviews/intrvw_ls01.html">das ist normal</a>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
             <div class="flex pb-20">
                 <div id="mvuama" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Moises Mvuama</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         1966 wurde Moises Mvuama in Angola geboren. Mit dem Wunsch, vier oder acht Jahre, eine Aussbildung als
                         Schiffsmechaniker zu absolvieren kam er 1987 in die DDR. Mit 21 Jahren wurde er in der Schlosserei des SVKEs
                         [Schlacht- und Verarbeitungskominat Eberswalde] ausgebildet und arbeitete bis 1990 als Vertragsarbeiter in
@@ -279,7 +279,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800"> Moises Interviews:</span>
+                        <span class="font-semibold text-black"> Moises Interviews:</span>
                         <a href="./interviews/intrvw_mm01.html">der Rassismus wurde noch stärker</a> -
                         <a href="./interviews/intrvw_mm02.html">in diesem Land muss ich sterben</a> -
                         <a href="./interviews/intrvw_mm03.html">heute habe ich dieses Trauma nicht mehr</a> - die kannten keine Schwarzen
@@ -304,7 +304,7 @@
 
                 <div id="sieglinder" class="w-3/5 pl-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Sieglinde R.</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Sieglinde R. wurde 1942 geboren. 1977 war sie mit ihrer Familie eine der ersten Mieter:innen in der
                         Plattenbausiedlung Rostock-Lichtenhagen. Sie lebt heute im Sonnenblumehochhaus in Rostock-Lichtenhagen.
                     </div>
@@ -316,7 +316,7 @@
             <div class="flex pb-20">
                 <div id="silkedenniso" class="w-3/5 pr-10 text-lg">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Silke und Dennis O.</h4>
-                    <div class="text-base font-semibold">
+                    <div class=" text-lg font-semibold">
                         Silke O. wurde in Hoyerswerda, Dennis O. wurde in Queklenburg geboren, beide sind Jahrgang 1963. Dennis O. hat Silke
                         O. 1984 währen seinem Militärdienst bei der Marine kennengelernt. Im Aschluss zog Dennis O. 1985 nach Hoyerswerda um
                         Silke O. zu heiraten. Silke O. arbeitete als Krippenerzieherin in einem Dauerheim und Dennis O. war im VEB
@@ -325,7 +325,7 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-red-800"> Silke und Dennis Interviews:</span>
+                        <span class="font-semibold text-black"> Silke und Dennis Interviews:</span>
                         <a href="./interviews/intrvw_ot01.html">es war nicht böse gemeint</a> -
                         <a href="./interviews/intrvw_ot02.html">dieser Begriff „Vertragsarbeiter“</a> -
                         <a href="./interviews/intrvw_ot03.html">wir waren immer sicher</a> - die Möglichkeit hatten wir gar nicht - es war
