--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -10,10 +10,10 @@
         </header>
 
         <main class="font-crimson-text tracking-tight">
-            <div class="flex pb-20">
-                <div id="munjunga" class="w-3/5 pr-10 text-lg">
+            <div class="flex flex-col pb-20 md:flex-row">
+                <div id="munjunga" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Augusto Jone Munjunga</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Augusto Jone Munjunga wurde 1965 in Angola geboren. Nach dem Militärdienst arbeitete er als Finanzkaufmann im
                         Staatsministerium der Provinz Benguela. Mit der Vorstellung zu studieren kam Augusto 1987, als 22 Jähriger in die
                         DDR. Statt des Studiums wurde er im SVKE [Schlacht- und Verarbeitungskominat Eberswalde] als Vertragsarbeiter
@@ -33,23 +33,23 @@
                     </div>
                 </div>
 
-                <div class="w-2/5 pt-3">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_036.jpg" class="aspect-auto w-full" />
                     <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von Augusto Jone Munjunga</span>
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div class="w-2/5 pt-3">
+            <div class="flex flex-col-reverse pb-20 md:flex-row">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_037.jpg" class="w-full" />
                     <span class="block w-full text-left text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-1989-0507-020 / Wolfgang Thieme / CC-BY-SA 3.0</span
                     >
                 </div>
 
-                <div id="pfaff" class="w-3/5 pl-10 text-lg">
+                <div id="pfaff" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ngoc Bich Pfaff</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Ngoc Bich Pfaff wurde 1965 in Vietnam geboren. Mit 17 Jahren kam sie als Vertragsarbeiterin in die DDR, um in
                         Schwarzenberg-Erzebirge zu arbeiten. Entgegen der Bestimmungen für den Aufenthalt wurde Ngoc Bich Pfaff schwanger
                         und entschied sich 1986 ihre Tochter zu bekommen. Mit der Unterstütztung von deutschen Kolleg:innen und
@@ -61,10 +61,10 @@
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div id="macou" class="w-3/5 pr-10 text-lg">
+            <div class="flex flex-col pb-20 md:flex-row">
+                <div id="macou" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">David Macou</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         David Macou wurde 1959 in Mosambik geboren. 1979 kam er mit 19 Jahren, als einer der ersten mozambikanischen
                         Vertragsarbeiter:innen, in die DDR. Er arbeitete im VEB Braunkohlewerk Welzow [Schwarze Pumpe]. Mit polnischen,
                         vietnamesischen und mosambikanischen Vertragsarbeiter:innen lebte er im Wohnheim in Hoyerswerda. Unter dem Beifall
@@ -81,21 +81,21 @@
                     </div>
                 </div>
 
-                <div class="w-2/5 pt-3">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_038.jpg" class="w-full" />
                     <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von David Macou</span>
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div class="w-2/5 pt-3">
+            <div class="flex flex-col-reverse pb-20 md:flex-row">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_039.jpg" class="w-full" />
                     <span class="block w-full text-left text-xs text-gray-800">Bundesarchiv, Bild 183-Z0514-026/CC-BY-SA 3.0</span>
                 </div>
 
-                <div id="dorinasandreass" class="w-3/5 pl-10 text-lg">
+                <div id="dorinasandreass" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Dorina und Andreas S.</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Dorina S. wurde 1969 geboren und wuchs in Rostock-Lichtenhagen auf. Nach der Lehre als Verkäuferin arbeitete sie ab
                         1988 als Betreuerin für geistigbehinderte Jugendlichen in Rostock-Lichtenhagen. Andreas S. wurde 1965 geboren und
                         wuchs mit fünf weiteren Geschwistern im Rostocker Hansa-Viertel auf. Bis zu einem Arbeitsunfall war er Facharbeiter
@@ -113,10 +113,10 @@
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div id="nam" class="w-3/5 pr-10 text-lg">
+            <div class="flex flex-col pb-20 md:flex-row">
+                <div id="nam" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Duong Hoai Nam</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         1958 wurde Duong Hoai Nam wurde in Vietnam geboren. Duong Hoai Nam ist während dem Vietnamkrieg aufgewachsen und kam
                         1988 als Vertragsarbeiter in die DDR. Von 1988 bis 1991 war er vollbeschäftigt in einem Kombinat in Karl-Marx-Stadt
                         (heute Chemnitz). Heute lebt er in Leipzig, arbeitet als Trainer in seinem eigenen Kampfsport Studio und ist
@@ -129,21 +129,21 @@
                     </div>
                 </div>
 
-                <div class="w-2/5 pt-3">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_040.jpg" class="w-full" />
                     <span class="block w-full text-right text-xs text-gray-800">Bundesarchiv, Bild 183-1982-0915-020 / CC-BY-SA 3.0</span>
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div class="w-2/5 pt-3">
+            <div class="flex flex-col-reverse pb-20 md:flex-row">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_041.jpg" class="w-full" />
                     <span class="block w-full text-left text-xs text-gray-800">Aus dem Archiv von Ibraimo Alberto</span>
                 </div>
 
-                <div id="alberto" class="w-3/5 pl-10 text-lg">
+                <div id="alberto" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ibraimo Alberto</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Ibraimo Alberto wurde 1963 in Mosambik geboren. Er kam 1981 für ein Studium in die DDR, statt dessen wurde er im VEB
                         Fleischkombinat Berlin als Vertragsarbeiter eingesetzt und als Fleischer ausgebildet. Nach einem kurzen Aufenthalt
                         in Mosambik kam Ibraimo Alberto zurück in die DDR. Für das VEB Glaswerk Stralau arbeitete er als Gruppenleiter der
@@ -162,10 +162,10 @@
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div id="jankrenek" class="w-3/5 pr-10 text-lg">
+            <div class="flex flex-col pb-20 md:flex-row">
+                <div id="jankrenek" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Jan K. und René K.</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Jan K. wurde 1968, René K. 1976 geboren. Im September 1991 waren beide Teil der Masse in Hoyerswerda, die das
                         Wohnheim für Vertragsarbeiter:innen und die Geflüchtetenunterkunft angriff. Heute sind Jan K. und René K. engagierte
                         Mitglieder des VVN-BdA [Vereinigung der Verfolgten des Naziregimes – Bund der Antifaschistinnen und Antifaschisten
@@ -180,7 +180,7 @@
                     </div>
                 </div>
 
-                <div class="w-2/5 pt-3">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_042.jpg" class="w-full" />
                     <span class="block w-full text-right text-xs text-gray-800"
                         >Bundesarchiv, Bild 183-1990-0115-032 / Kluge, Wolfgang / CC-BY-SA 3.0</span
@@ -188,15 +188,15 @@
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div class="w-2/5 pt-3">
+            <div class="flex flex-col-reverse pb-20 md:flex-row">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_043.jpg" class="w-full" />
                     <span class="block w-full text-left text-xs text-gray-800">Aus dem Archiv von Augusto Jone Munjunga</span>
                 </div>
 
-                <div id="kordulas" class="w-3/5 pl-10 text-lg">
+                <div id="kordulas" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Kordula S.</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Kordula S. wurde 1960 in Eberswalde geboren. Sie arbeitet bis 1991 im SVKE [Schlacht- und Verarbeitungskominat
                         Eberswalde], dort war sie unter anderem als Betreuerin der angolanischen und mosambikanischen Vertragsarbeiter:innen
                         beschäftigt. 2000 gründete Kordula S. ihr eigenes Bestattungsunternehmen. Seit 1999 ist sie Mitglied der PDS, jetzt
@@ -211,10 +211,10 @@
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div id="gotsch" class="w-3/5 pr-10 text-lg">
+            <div class="flex flex-col pb-20 md:flex-row">
+                <div id="gotsch" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lam Gotsch</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Lam Gotsch wurde 1951 in Ho-Chi-Min-Stadt (heute Hanoi) geboren. Direkt nach dem Abitur 1968 kam sie in die DDR, wo
                         sie an der TU-Dresden Maschinenbau studierte. Lam Gotsch kam als Vertragsarbeiterin 1987 ein zweites Mal in die DDR.
                         Sie arbeitete als Sprachvermittlerin im VEB Kombinat Textima in Karl-Marx-Stadt (heute Chemnitz). 1989 holte sie
@@ -225,21 +225,21 @@
                     <div class="my-2"><span class="font-semibold text-red-800">Lams Interviews:</span> ich bin jetzt glücklich</div>
                 </div>
 
-                <div class="w-2/5 pt-3">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_044.jpg" class="w-full" />
                     <span class="block w-full text-right text-xs text-gray-800">Bundesarchiv, Bild 183-38600-0007 / CC-BY-SA 3.0</span>
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div class="w-2/5 pt-3">
+            <div class="flex flex-col-reverse pb-20 md:flex-row">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_045.jpg" class="w-full" />
                     <span class="block w-full text-left text-xs text-gray-800">Archivbild von Hayo von Reyhe</span>
                 </div>
 
-                <div id="seifert" class="w-3/5 pl-10 text-lg">
+                <div id="seifert" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lan und Huu Loi Bin Seifert</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Lan Seifert wurde 1970 und Loi Bin Seifert wurde 1965 geboren. Beide wuchsen in Vietnam auf und kamen 1988 als
                         Vetragsarbeiter:innen in die DDR. Lan und Huu Loi Bin Seifert waren im VEB Leuchtenbau Leipzig tätig, wo sie sich
                         kennen lernten. Nach der Wende heirateten sie und bekamen einen Sohn. Aus Rationalisierungsgründen konnten nicht
@@ -255,10 +255,10 @@
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div id="mvuama" class="w-3/5 pr-10 text-lg">
+            <div class="flex flex-col pb-20 md:flex-row">
+                <div id="mvuama" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Moises Mvuama</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         1966 wurde Moises Mvuama in Angola geboren. Mit dem Wunsch, vier oder acht Jahre, eine Aussbildung als
                         Schiffsmechaniker zu absolvieren kam er 1987 in die DDR. Mit 21 Jahren wurde er in der Schlosserei des SVKEs
                         [Schlacht- und Verarbeitungskominat Eberswalde] ausgebildet und arbeitete bis 1990 als Vertragsarbeiter in
@@ -276,21 +276,21 @@
                     </div>
                 </div>
 
-                <div class="w-2/5 pt-3">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_046.jpg" class="w-full" />
                     <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von Augusto Jone Munjunga</span>
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div class="w-2/5 pt-3">
+            <div class="flex flex-col-reverse pb-20 md:flex-row">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_047.jpg" class="w-full" />
                     <span class="block w-full text-left text-xs text-gray-800">Bundesarchiv, Bild 183-H0612-0301-020/CC-BY-SA 3.0</span>
                 </div>
 
-                <div id="sieglinder" class="w-3/5 pl-10 text-lg">
+                <div id="sieglinder" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Sieglinde R.</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Sieglinde R. wurde 1942 geboren. 1977 war sie mit ihrer Familie eine der ersten Mieter:innen in der
                         Plattenbausiedlung Rostock-Lichtenhagen. Sie lebt heute im Sonnenblumehochhaus in Rostock-Lichtenhagen.
                     </div>
@@ -299,10 +299,10 @@
                 </div>
             </div>
 
-            <div class="flex pb-20">
-                <div id="silkedenniso" class="w-3/5 pr-10 text-lg">
+            <div class="flex flex-col pb-20 md:flex-row">
+                <div id="silkedenniso" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Silke und Dennis O.</h4>
-                    <div class="text-lg font-semibold">
+                    <div class="text-justify text-lg font-semibold">
                         Silke O. wurde in Hoyerswerda, Dennis O. wurde in Queklenburg geboren, beide sind Jahrgang 1963. Dennis O. hat Silke
                         O. 1984 währen seinem Militärdienst bei der Marine kennengelernt. Im Aschluss zog Dennis O. 1985 nach Hoyerswerda um
                         Silke O. zu heiraten. Silke O. arbeitete als Krippenerzieherin in einem Dauerheim und Dennis O. war im VEB
@@ -319,7 +319,7 @@
                     </div>
                 </div>
 
-                <div class="w-2/5 pt-3">
+                <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_048.jpg" class="w-full" />
                     <span class="block w-full text-right text-xs text-gray-800">Bundesarchiv, Bild 183-78464-0001/CC-BY-SA 3.0</span>
                 </div>
